src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>OfferSimilar2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>5. Oferecer similar 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Casos (5. Oferecer similar 2)</relationshipLabel>
        <relationshipName>Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OfferSimilar3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>7. Oferecer similar 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Casos (7. Oferecer similar 3)</relationshipLabel>
        <relationshipName>Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpenedOccurrenceException__c</fullName>
        <label>Foi aberta ocorrência em exceção?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Número do Pedido</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Gemco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido Gemco</label>
        <referenceTo>Order_Gemco__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido Admsite</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverdueInvoice__c</fullName>
        <label>Nota fiscal vencida?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentForm__c</fullName>
        <label>Forma de pagamento</label>
        <picklist>
            <picklistValues>
                <fullName>Cartão</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boleto (PREENCHER O &quot;Bloco 2&quot; - Boleto)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pedido_Admsite__c</fullName>
        <label>Pedido Admsite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pedido_Gemco__c</fullName>
        <label>Pedido Gemco</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber_1__c</fullName>
        <label>Telefone 1ª opção</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber_2__c</fullName>
        <label>Telefone 2ª opção</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prazo_de_Resolucao__c</fullName>
        <label>Prazo de Resolução</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProblemTypeExchangeSale__c</fullName>
        <label>Tipo de problema com a troca/ venda? </label>
        <picklist>
            <picklistValues>
                <fullName>Dados divergentes - Enviar para Ativo contatar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto - Enviar para Suporte Comercial verificar similar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProblemTypeRegistration__c</fullName>
        <label>Tipo de problema com o cadastro</label>
        <picklist>
            <picklistValues>
                <fullName>Cliente não consegue modificar a senha (NÃO PREENCHER NOVO E-MAIL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente não consegue modificar o e-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente não acessa mais e-mail e deseja alterar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProccessNumber__c</fullName>
        <label>Número do Processo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Código do produto do outro cliente</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductcValue__c</fullName>
        <label>Valor do produto do outro cliente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Produto_n_o_encontrado__c</fullName>
        <description>Campo para preenchimento do produto não encontrado (indisponível ou não contemplado).</description>
        <label>Produto não encontrado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromisedDateCollection__c</fullName>
        <label>Data prometida para coleta, não cumprida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedSolutionCommercialSupport__c</fullName>
        <label>Solução proposta pelo suporte comercial</label>
        <picklist>
            <picklistValues>
                <fullName>Fornecedor enviará peça ou acessório</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não temos produto correto disponível e nem similar - Orientar cliente a escolher outro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efetue a troca para o cliente pelo produto correto (&quot;Bloco 2&quot;: PREENCHER A PERGUNTA 1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previsão de recebimento do item (&quot;Bloco 2&quot;: PREENCHER AS PERGUNTAS 2., 3. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indisponível no fornecedor/ Fora de linha (&quot;Bloco 2&quot;: PREENCHER AS PERGUNTAS DE 3. A 8.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProtocoloAtendimento__c</fullName>
        <label>Protocolo de atendimento</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IMAGE( 
CASE(ServiceRating__c, 
1, &quot;/img/samples/stars_100.gif&quot;,
2, &quot;/img/samples/stars_200.gif&quot;,
3, &quot;/img/samples/stars_300.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <label>Avaliação</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_aberto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-aberto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonException__c</fullName>
        <label>Motivo que ocasionou a exceção?</label>
        <picklist>
            <picklistValues>
                <fullName>Atraso interno Reversa / Atraso envio RCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atraso interno Reversa / Atraso na análise do produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atraso interno Reversa / Atraso na Emissão de NFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atraso interno Reversa / Atraso na re-postagem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaria - após 48 horas da entrega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaria - consta no status - pedido ainda não foi entregue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaria dentro de 48 horas da entrega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente não aceita o prazo / processos normais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Devolução atrasada com comprovante (&quot;Bloco 3&quot; - Transportes: PREENCHER 2. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Devolução atrasada sem comprovante / transportadora alega não ter coletado (&quot;Bloco 3&quot; - Transportes: PREENCHER 2. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Devolução atrasada sem comprovante / transportadora não confirmou a coleta (&quot;Bloco 3&quot; - Transportes: PREENCHER 2. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Recontato (&quot;Bloco 3&quot; - Transportes: PREENCHER 3. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divergência de estoque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embalagem interna com dados de outro cliente (PREENCHER &quot;Bloco 4&quot;)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro no ato da compra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extravio - consta no status - pedido ainda não foi entregue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operacional Processamento / Atraso na emissão da troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operacional Processamento / Envio produto errado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operacional Processamento / Falta um item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido faltando item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto indisponível</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sinistro - consta no status - pedido ainda não foi entregue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Devolução atrasada com comprovante (&quot;Bloco 2&quot; - Transportes: PREENCHER 2. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Devolução atrasada sem comprovante / transportadora alega não ter coletado (&quot;Bloco 2&quot; - Transportes: PREENCHER 2. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Devolução atrasada sem comprovante / transportadora não confirmou a coleta (&quot;Bloco 2&quot; - Transportes: PREENCHER 2. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta - Recontato (&quot;Bloco 2&quot; - Transportes: PREENCHER 3. E 4.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embalagem interna com dados de outro cliente (PREENCHER &quot;Bloco 3&quot;)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RechargedANS__c</fullName>
        <label>Refaturamento conforme ANS?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferencePoint__c</fullName>
        <label>Ponto de referência</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibleError__c</fullName>
        <label>Responsável pelo erro</label>
        <picklist>
            <picklistValues>
                <fullName>CD - Armazenamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD - Expedição</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD - Recebimento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC - Cadastro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimídia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_4_1_Fase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 4 1° Fase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_4_2_Fase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 4 2° Fase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_4_3_Fase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA 4 3° Fase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lojista</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Casos (Logista)</relationshipLabel>
        <relationshipName>CasosSeller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceRating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nota do Atendimento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiteIdentifiedError__c</fullName>
        <label>Possui print do site com erro?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SlipText__c</fullName>
        <label>Slip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slip__c</fullName>
        <formula>Order_Gemco__r.SLIP__c</formula>
        <label>Slip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusApplication__c</fullName>
        <label>Qual é a situação do pedido ?</label>
        <picklist>
            <picklistValues>
                <fullName>Erro de empenho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não integrado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_E_mail__c</fullName>
        <formula>if(E_Mail_Recebido__c==true || E_Mail_Enviado__c==true,
	if( E_Mail_Recebido__c ==true,
		IMAGE(&quot;/resource/1429551235000/EmailReceive&quot;,&quot;E-mail Recebido&quot;,18,18),
		Image(&quot;/resource/1429551255000/EmailSend&quot;,&apos;E-mail Enviado&apos;,18,18) ),
		Image(&quot;/resource/1429551280000/EmailAlert&quot;,&quot;E-mail Pendente&quot;,18,18))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StopShippingProduct__c</fullName>
        <label>Barrar envio do produto?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não (PREENCHER ENDEREÇO - próxima pergunta)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TempoRestanteSLA__c</fullName>
        <label>Tempo Restante de SLA (minutos)</label>
        <picklist>
            <picklistValues>
                <fullName>&gt; 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 60 e &gt; 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 30 e &gt; 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 15</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ThereDifferenceCharged__c</fullName>
        <label>Há diferença a ser cobrada</label>
        <picklist>
            <picklistValues>
                <fullName>Sim (PREENCHER VALOR DA DIFERENÇA - próxima pergunta)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoAtendimento__c</fullName>
        <formula>CASE(RecordType.Name, &apos;MktPlace - Cancelamento&apos;, &apos;Cancelamento&apos;, &apos;MktPlace - Dúvidas gerais&apos;, &apos;Dúvidas gerais&apos;, &apos;MktPlace - Troca&apos;, &apos;Troca&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de atendimento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalSellerInteractions__c</fullName>
        <label>Total de interações Lojista</label>
        <summaryFilterItems>
            <field>CaseComment__c.TipoAutor__c</field>
            <operation>equals</operation>
            <value>Seller</value>
        </summaryFilterItems>
        <summaryForeignKey>CaseComment__c.Caso__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TransferReason__c</fullName>
        <label>Motivo da Transferencia</label>
        <picklist>
            <picklistValues>
                <fullName>Troca fora do prazo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informações sobre produtos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistências técnicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lojas físicas Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outros [Abre campo]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informações sobre o site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabalhar na Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoções Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aplicativos Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empresas afiliadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relação com investidores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeAccountBank__c</fullName>
        <label>Tipo da Conta?</label>
        <picklist>
            <picklistValues>
                <fullName>Poupança</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conta Corrente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeCancel__c</fullName>
        <label>Tipo do cancelamento?</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelamento total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelamento parcial (somente garantia)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeChange__c</fullName>
        <label>Tipo da troca?</label>
        <picklist>
            <picklistValues>
                <fullName>Ocorrência admsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troca simbólica MLAdmin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeDelevery__c</fullName>
        <label>Tipo de entrega</label>
        <picklist>
            <picklistValues>
                <fullName>Agendada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convencional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agendada (PREENCHER DATA DO AGENDAMENTO - próxima pergunta)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeEvent__c</fullName>
        <label>Tipo de ocorrência</label>
        <picklist>
            <picklistValues>
                <fullName>Troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelamento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeNFRecharged__c</fullName>
        <label>Tipo da NF - Refaturamento?</label>
        <picklist>
            <picklistValues>
                <fullName>Entrega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coleta (PREENCHER Número NF Coleta)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeRecharged__c</fullName>
        <label>Tipo de refaturamento?</label>
        <picklist>
            <picklistValues>
                <fullName>Avaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaria restrita (vidros)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extravio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sinistro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValueDiference__c</fullName>
        <label>Valor da diferença</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValueNF__c</fullName>
        <label>Valor da NF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhatConditionFirstShippingContainer__c</fullName>
        <label>Condição da primeira embalagem de envio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatConditionOriginalPackagingProduct__c</fullName>
        <inlineHelpText>Embalagem original do produto.</inlineHelpText>
        <label>Condição da embalagem original</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatItemPartMissing__c</fullName>
        <label>Qual item / peça está faltando?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatStatusConsistingNF__c</fullName>
        <label>O que está constando no status desta NF?</label>
        <picklist>
            <picklistValues>
                <fullName>Consta avaria e há apenas um produto na NF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consta avaria e há mais de um produto na NF (NÃO ABRE OCORRÊNCIA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consta entregue/ rota de entrega, mas o cliente recebeu avariado dentro de 48 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consta entregue/ rota de entrega, mas o cliente recebeu avariado há mais de 48 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consta extravio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consta sinistro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhatTotalValueDamagedLostInjuredItems__c</fullName>
        <inlineHelpText>Valor total dos itens avariados / extraviados / sinistrados</inlineHelpText>
        <label>R$ avariados/ extraviados/ sinistrados</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhatVolumeNumber__c</fullName>
        <label>Nº volume que consta na caixa recebida</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatWouldChange__c</fullName>
        <label>O que deseja alterar?</label>
        <picklist>
            <picklistValues>
                <fullName>Alterar cartão de crédito</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterar endereço de entrega do novo item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterar produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterar valor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterar outros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterar para cancelamento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhoReceivedMerchant__c</fullName>
        <label>Quem recebeu a mercadoria?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhouldCustumer__c</fullName>
        <label>Cliente deseja?</label>
        <picklist>
            <picklistValues>
                <fullName>Trocar - Inserir dados do novo produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trocar - Enviar para suporte comercial verificar similar (PREENCHER &quot;Cliente possui alguma preferência ?&quot;)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhyProductReturnedCD__c</fullName>
        <label>Por que o produto foi devolvido no CD?</label>
        <picklist>
            <picklistValues>
                <fullName>Área de risco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaria | Erro do fornecedor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaria no transporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente ausente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF/CNPJ errado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desistência da compra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destinatário desconhecido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endereço de difícil acesso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endereço insuficiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endereço não localizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro no ato da compra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extravio transportadora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fora de rota (perímetro)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraude constatada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insatisfação com o produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mudou-se do local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não existe o número indicado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto com defeito funcional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto com embalagem danificada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recusado na entrega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retido na fiscalização</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelar refaturamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerou sem produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produto refaturado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refaturado em duplicidade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhyReestablishment__c</fullName>
        <label>Por que houve o recontato?</label>
        <picklist>
            <picklistValues>
                <fullName>Cliente não aceitou o prazo do protocolo anterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não ocorreu a coleta na data prometida no protocolo anterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem posição para o cliente no protocolo anterior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>area_solucionadora__c</fullName>
        <label>Área solucionadora</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCasesFraude</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>area_solucionadora__c</columns>
        <columns>Prazo_de_Resolucao__c</columns>
        <columns>DataFlow__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Case.MktPlace_CancelamentoPedido,Case.MktPlace_DuvidasProdutos,Case.MktPlace_PosicaoEntrega</value>
        </filters>
        <label>Todos abertos: Análise de fraude Samsung</label>
        <queue>An_lise_de_fraude_Samsung</queue>
        <sharedTo>
            <group>An_lise_de_fraude_Samsung</group>
            <role>Atendente</role>
            <role>Coordenacao</role>
            <role>Gerente_Geral</role>
            <role>Supervisao</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCasesMarketPlace</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ProtocoloAtendimento__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.MILESTONE_STATUS</columns>
        <columns>MktPlace_FlagMediacaoMagazine__c</columns>
        <columns>MktPlaceAcaoMagazine__c</columns>
        <columns>TipoAtendimento__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.MktPlace_CancelamentoPedido,Case.MktPlace_DuvidasProdutos,Case.MktPlace_PosicaoEntrega</value>
        </filters>
        <label>-Todos os casos abertos</label>
        <sharedTo>
            <role>Atendente_MktPlace</role>
            <role>GerenteGeral_MktPlace</role>
            <role>Supervisao_MktPlace</role>
        </sharedTo>
    </listViews>
</CustomObject>